<resources>
    <string name="app_name">Did You Make Right Choice?</string>
    <string name="start">Start New Game</string>
    <string name="load">Load Game</string>
    <string name="delete">Delete Old Game</string>
    <string name="title">Welcome to </string>
    <string name="title2">Did You Make Right the Choice?</string>
    <string name="subtitle">Where Every Choice Counts</string>
    <string name="des"> </string>
    <string name="story_load">Please choose which story you would like to play</string>
    <string name="story_start">Start your game</string>
    <string name="red_start1">After a long hard day at your boring office job, you arrive at home. Before you walk into your house, you see a letter in your mailbox; an unusual occurrence as bill day is Thursday not Monday. As you draw closer towards the mailbox, you see the envelope inside is red. Red envelopes are quite suspicious and ominous. Rarely does one see red envelopes in their daily mail. Make a choice. Do you open the red envelope or do you ignore it and go inside of your home? </string>
    <string name="red_play"> </string>
    <string name="red_pause"> </string>
    <string name="red_stop"> </string>
    <string name="red_p2">A red envelope—Ha! You decide that it is too suspicious and plausibly a poor taste joke rendered by youth in the neighborhood. You choose to ignore the envelope and to go inside of your home. Half way up the driveway, you slip and fall head first on a rock. Your body mysteriously disappeared from the driveway that day. No one knows or saw what happened. No traces of you or your body were ever found. Who would’ve moved a dead body? Were there any witnesses? Could the deliverer of the red envelope have anything to do with your missing body?</string>
    <string name="red_p3">As the saying goes, “Curiosity killed the cat.” You are too curious not to open and read the contents of the red envelope. You grab it out of your mailbox and anxiously open it. Typed on a red sheet of stationary, you see seven words. ‘Meet me on the docks at twelve.’ Should you follow the instructions? Who would want you to meet them at the docks? This is a very odd request; nothing short of some stereotypical horror story set up that’s usually told around the camp fire. Make a choice. Do you drive to the dock to meet the mysterious person who left you the red envelope and letter or do you ignore the letter and go inside of your home.</string>
    <string name="red_p4">Looking down at your watch, it read 11:55 pm. Great! A short walk down the street and you’ll arrive at the docks. Punctuality is key. Hopefully this mysterious person will explain their strange, red envelope invitation. You arrive at the docks. Checking your watch again, it reads11:59 pm. No one is on the dock but you. Where is this mystery person? Do you think he forgot? Or is this a childish prank? A car motor rumbles in the distance. Your eyes squint at a pair of bright yellow headlights heading towards you. The motor of the car grows louder and louder. Make a choice. Do you wait for the driver of the car to reveal themselves or do you run away as fast as you can?</string>
    <string name="red_p5">You wait. The car gets dangerously close to you. The past five seconds feel like an hour. The closer the car gets, the more you regret not running away. This is madness! How could someone be so foolish to meet with an unknown person who invites you with the most ominous looking letter?  You can see the car has a red hood with a distinct white stripe. Closer and closer, the car in barely a foot in front of you. You brace yourself for the car’s impact anticipating the shock of pain you would feel as the car meets your body. The car stops. You open one eye, then the other, to see a well-dressed man exiting the car. In his hand is a gun. “Where is the money?” shouts the dapper mysterious mobster. Make a choice. Do you run away to safety or do you do try to reason with him? </string>
    <string name="red_p6">You take off! Running like the Olympians competing in the 100-yard dash. The car motor roars to life. The car’s headlights light your way. You take a left turn onto a dark alleyway that leads to a small boat house. The car speeds past you. For now, you’re safe. Hightailing it down several streets, you find the nearest police station. Inside, you quickly tell your story. Everything from the red envelope to your arrival at the police station. You’re placed into an interrogation room. Hopefully for your safe-keeping. Thirty minutes past and police sergeant who you told your story to, returns. A sly look appears across his face. He faintly looks amused. As the sergeant opens his mouth, your hands grow cold.  You learn that you were set up. The red envelope was the bait. The next 20 years of your life will be spent in prison as the city’s largest drug dealer was finally caught. Thinking back to the red envelope, you wonder. Did you make the right choice?</string>
    <string name="red_p7">As you begin to speak, you feel a throbbing pain at your left temple. You fall to your knees in body-racking pain. You try to compose yourself but it seems as if the earth is moving below your feet. Someone or something touches your arm. In a panic, you open your eyes, praying the mobster is offering mercy and a helpful hand to you. Standing over you, is your neighbor, Bill. “Looks like you took a little tumble there Alex. You gotta get these loose rocks out of your driveway! I called an ambulance and came right over to check on you. Help will be here soon.” A dream. There was no red envelope. No meeting at the docks. No gun-toting mobster looking for money. A dream. Rising up on your elbows, you hear sirens in the distance. You look to your mailbox. Something’s inside. A red envelope. Make a choice.
</string>
    <string name="realm_start">You are a magician in King Arthur’s court. You are in the fields just outside of Camelot when a black, snarling, cross-eyed, vicious-looking dragon roars overhead. </string>
    <string name="realm_c2">After a long day’s worth of flying the dragon was actually thirsty. He swoops down from the sky, and you two have tea together. Like a sir, the dragon asks you to aid him on his journey to Mount Makalacka. </string>
    <string name="realm_c3">The dragon roars in pain and swirls into a nearby field. You venture to where the beast crashlanded. The dragon has many crossbow wounds in his wing and is whimpering for help. </string>
    <string name="realm_c4">The dragon howls with flaming laughter and melts your luscious afro off. “You are a funny mortal!” The dragon shifts to the shape of a rainbow-painted unicorn and begins to charge a blinding beam of energy from the sole horn on his head, which is aimed at you. </string>
    <string name="realm_c5">As you finish putting on your new dragon suit, you test your flying abilities. Everything seems to be fine as you fly over the land. You spy a strange mountain below you, but also in the distance there is a floating, jeweled island.</string>
    <string name="realm_c6">The dragon lets you ride him to Mt. Mackalacka. After you dismount from the dragon, the beast suddenly takes off. A shadowy, hooded figure appears and begins to walk slowly towards you. “I… am Darth Merlin!” The man stops walking, and his eyes begin to glow a sinister red. “Time to die!” He fires red lasers from his eyes. </string>
    <string name="realm_c7">You give the dragon your most potent healing herbs and some of your leftover Skittles. You begin to pull out the arrows when suddenly the dragon flashes with dazzling color. He transforms into a beautiful damsel! “Please! Allow me to give you a hug!” the beautiful damsel says. She has something shiny in her hands. Could it be the Holy Grail?</string>
    <string name="realm_c8">The both of you fire your spells simultaneously. Waves of dazzling, rainbow-colored sparks erupt from the spells impact and send you flying back. Since the unicorn wasn’t as awesome as you, it was incinerated by the explosion. Yards away, where the spells collided, now lay a golden, glimmering goblet. You have found the Holy Grail! You win! </string>
    <string name="realm_c9">You swoop down low over the mountain. The peak is littered with dead corpses. You notice a path leading into what appears to be a cave. There’s a mysterious glow emitting from the cavemouth. Could it be the Holy Grail?</string>
    <string name="realm_c10">The king of the Netherworld erupts from the ground and begins to wrestle the unicorn. After a dazzling battle with rainbow blasts and soul tornadoes, the demon king rips the magical horn from the unicorn’s head and drains his soul. Armed with the mystical wand of the unicorn, the mighty king of the Netherworld easily annihilates you and heads out on his quest to enslave the entire human population. You have failed miserably.</string>
    <string name="realm_c11">You bypass the mountain peak and continue flying toward the floating, jeweled island. Suddenly, you hear a loud roar. Another dragon is swooping down at you. It appears to be an enormous male dragon. He flies incredibly close and sniffs you. He smells the McChicken that you hid in your robes for lunch. With one huge snap, he ends your life. You are dead. </string>
    <string name="realm_c12">Milliseconds before the blast reaches your face, you deflect it with your force palms. You charge Darth Merlin and do a spinning backflip-kick to his face. Merlin flies back and hits his head on a large slab of stone. Minutes later, the man stands and claims that he has absolutely no idea who he is. He asks, “Who am I?” You reply… </string>
    <string name="realm_c13">You happily give the maiden a hug. But you suddenly feel a strange pain in your back. The world begins to spin, and you stumble backward. The maiden is holding a bloody knife. Then, with a sweet smile, she ends your life. You are dead. </string>
    <string name="realm_c14">You can’t just inhale Merlin’s lasers! Are you crazy? The red beams fly through your head. You are now dead, fool!</string>
    <string name="realm_c15">Furious at your refusal, the damsel rips her own face off to reveal a purple, insect-like face. “The Ant Queen!” you cry, instantly recognizing his evil sorceress. You turn to run, and you hear the clicking of the Ant Queen as she follows behind.</string>
    <string name="realm_c16">“But the world seems so beautiful!” the wizard cries in anguish. He sprints to the nearest cliff and leaps off. I don’t want to describe the sickening crunch you heard as his body hit the ground, so I’ll just say that you never see him again. You slew the most powerful wizard of all time! You’ve won!</string>
    <string name="realm_c17">As you enter the cave, you start to sweat and find it hard to breathe. But you are determined to find the source of the glow, so you venture deeper into the cave. The cave leads to a long, thin stone bridge. What now?</string>
    <string name="realm_c18">The man begins to dance. He gracefully bounds up close to you and agrees, “So I am.” As you turn to walk away, you hear a loud KA-BLAM. The wizard hurls a fireball at you and strikes you directly in the back of the head. You, my foolish friend, are now dead.</string>
    <string name="realm_c19">You start to leave the cave behind, but a few feet away from the mouth, tentacles fly out the darkness and wrap themselves around your throat and legs. They pull you back into the shadows of the cave, and you never see the light of day again—or anything else for that matter. You are dead.</string>
    <string name="realm_c21">Don’t just stand there! Do something!</string>
</resources>